--- a/bin/config/build_commands.toml
+++ b/bin/config/build_commands.toml
@@ -69,7 +69,7 @@ ext = "cpp"
 uname = "clang_debug"
 type = "compiled"
 build_file = "{{input_file}}.bin"
-build_command = "clang++ -o {{build_file}}  -g -DDEBUG {{input_file}}"
+build_command = "clang++ --std=c++17  -o {{build_file}}  -g -DDEBUG {{input_file}}"
 run_command = "./{{build_file}}"
 file_globs = [ "{{input_file}}" ]
 
@@ -80,9 +80,10 @@ type = "compiled"
 ext = "cpp"
 uname = "clang_release"
 build_file = "{{input_file}}.bin"
-build_command = "clang++ -o {{build_file}} -O2 {{input_file}}"
+build_command = "clang++ --std=c++17 -o {{build_file}} -O2 {{input_file}}"
 run_command = "./{{build_file}}"
 file_globs = [ "{{input_file}}" ]
+
 
 [[build]]
 name = "TCC C"
@@ -114,7 +115,7 @@ ext = "cpp"
 uname = "clang++_all"
 type = "compiled"
 build_file = "{{input_file}}.bin"
-build_command = "clang++ *.cpp -o {{build_file}}"
+build_command = "clang++  --std=c++17 *.cpp -o {{build_file}}"
 file_globs = [ "*.cpp", "*.hpp" ]
 run_command = "./{{build_file}}"
 
@@ -152,7 +153,7 @@ run_command = "./{{build_file}}"
 name = "Java single file"
 uname = "java_single_file_1"
 ext = "java"
-build_file = "{{input_file}}.d/out.jar"
+build_file = ".{{input_file}}.d/out.jar"
 build_command = """
 {{fsm_build_bin_dir}}/build-commands/java.pl {{input_file}}
 """
@@ -169,6 +170,33 @@ build_command = """
 """
 file_globs = [ "{{input_file}}" ]
 run_command = ""
+
+
+[[build]]
+name = "Java preprocessor no run"
+uname = "java_preprocessor_no_run_1"
+ext = "java"
+build_file = ".{{input_file}}.tmp.d/out.jar"
+build_command = """
+m4 {{input_file}} > {{input_file}}.tmp && \
+{{fsm_build_bin_dir}}/build-commands/java.pl {{input_file}}.tmp && \
+mv {{input_file}}.tmp .{{input_file}}.tmp.d/
+"""
+file_globs = [ "*.java", "*.m4" ]
+run_command = ""
+
+[[build]]
+name = "Java preprocessor do run"
+uname = "java_preprocessor_do_run_1"
+ext = "java"
+build_file = ".{{input_file}}.tmp.d/out.jar"
+build_command = """
+m4 {{input_file}} > {{input_file}}.tmp && \
+{{fsm_build_bin_dir}}/build-commands/java.pl {{input_file}}.tmp && \
+mv {{input_file}}.tmp .{{input_file}}.tmp.d/
+"""
+file_globs = [ "*.java", "*.m4" ]
+run_command = "java -jar {{build_file}}"
 
 [[build]]
 name = "Latex latexmk pdflua"
