[FEATURE] Improved test for flowchart generation
Now, instead of creating single hardcoded image we run over all files
in test directory with appropriate extension and generate flowchart
diagrams for them. After we generate all diagrams we output html page
with table that includes all images and highlighted source code.

--- a/bin/config/build_commands.toml
+++ b/bin/config/build_commands.toml
@@ -22,6 +22,14 @@ build_command = "mypy {{input_file}}"
 file_globs = [ "{{input_file}}" ]
 
 [[build]]
+name = "Python run"
+uname = "python_run"
+ext = "py"
+build_command = "./{{input_file}}"
+file_globs = [ "*.py" ]
+run_command = "true"
+
+[[build]]
 name = "Nim silent"
 ext = "nim"
 uname = "nim_silent"
