[FEATURE,TEST] Variant tree mapping to sequence
Added:
  - FIX(comp), TEST compilation test for `toVar2`.
  - TEST, DOC new test for `mapItBFStoSeq`, updated documentation
  - FEATURE `getTypeName` to get name of current type from variant
  - TEST get list of exported variables from pattern
Removed:
  - `filterOptions` parameter for bfs mapping - now `Option` results
    will be discarded unconditionally

--- a/hmisc/tests/nim.cfg
+++ b/hmisc/tests/nim.cfg
@@ -2,6 +2,7 @@
 --hints:off
 --cc:tcc
 --warning[ObservableStores]:off
+--warning[Deprecated]:off
 -d:shellThrowException
 --embedsrc
 --showAllMismatches:on
