[CLEAN|REFACTOR] Base `Parser` class
Changed:
  - CLEAN fix all compilation warnings
Added:
  - FEATURE `withResIt` - inject `it` variable and return result of
    body evaluation.
Removed:
  - REFACTOR removed base `Parser` class for all parsers. Now all
    parser objects are non-ref.

--- a/hparse/tests/nim.cfg
+++ b/hparse/tests/nim.cfg
@@ -2,5 +2,6 @@
 --verbosity:0
 --cc:tcc
 --warning[UnusedImport]:off
+--warning[ObservableStores]:off
 --colors:on
--d:prettyPrintLogging
+# -d:prettyPrintLogging
